# VevingHjelper

./: .gitignore  CMakeLists.txt  README.md  makefile  project
include/: app.h  config.h
src/: app.cpp  config.cpp  main.cpp  ui.cpp
